out/old/manifests/vault/Service.vault-agent-injector-svc.yaml
metadata:
  name: vault-agent-injector-svc
  namespace: vault
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault-agent-injector
  annotations:
    meta.helm.sh/release-name: vault
    meta.helm.sh/release-namespace: vault
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault-agent-injector
    component: webhook
  clusterIP: <IP_126>
  type: ClusterIP
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
