out/old/manifests/vault/Service.vault-ui.yaml
metadata:
  name: vault-ui
  namespace: vault
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault-ui
    helm.sh/chart: vault-0.8.0
  annotations:
    meta.helm.sh/release-name: vault
    meta.helm.sh/release-namespace: vault
spec:
  ports:
  - name: http
    protocol: TCP
    port: 18200
    targetPort: 8200
  selector:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault
    component: server
  clusterIP: <IP_127>
  type: ClusterIP
  externalIPs:
  - <CLEANUP_IP_5>
  sessionAffinity: <REDACTED:env>
  publishNotReadyAddresses: true
apiVersion: v1
kind: Service
