out/old/manifests/vault/Ingress.vault-ingress.yaml
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"vault:vault-ui","ingressName":"vault:vault-ingress","hostname":"vault.<COMPANY><DOMAIN_14>","path":"/","allNodes":false}]'
    ingress.kubernetes.io/app-root: /
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: vault.<COMPANY><DOMAIN_14>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault-ui
            port:
              number: 18200
apiVersion: <DOMAIN_775>/v1
kind: Ingress
